syntax = "proto3";

option go_package = "github.com/pion/ion/pkg/grpc/sfu";

package sfu;

service SFU {
    rpc Signal(stream SignalRequest) returns (stream SignalReply) {}
}

message SignalRequest {
    string id = 1;
    oneof payload {
        JoinRequest join = 2;
        bytes description = 3;
        Trickle trickle = 4;
    }
}

message SignalReply {
    string id = 1;
    oneof payload {
        JoinReply join = 2;
        bytes description = 3;
        Trickle trickle = 4;
        string iceConnectionState = 5;
        string error = 6;
    }
}

message JoinRequest {
    string sid = 1;
    string uid = 2;
    bytes description = 3;
}

message JoinReply {
    bytes description = 1;
}

message Trickle {
    enum Target {
        PUBLISHER = 0;
        SUBSCRIBER = 1;
    }
    Target target = 1;
    string init = 2;
}
